test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/void/void_compare.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[25]:
  int
  identifier(main)
  (
  void
  )
  {
  if
  (
  (
  void
  )
  const int(1)
  <
  (
  void
  )
  const int(2)
  )
  return
  const int(1)
  ;
  return
  const int(0)
  ;
  }
